# mclog

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  log.rs
src/analyzer/: mod.rs  static_analyzer.rs  template.rs
src/analyzer/dynamic/: chunks.rs  log.rs  mod.rs  plugins.rs  ports.rs  server.rs
src/parser/: delimiters.rs  log_level.rs  mod.rs  parser.rs
