[package]
name = "mclog"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "async parser and analyzer for Minecraft server logs"

[dependencies]
html-escape = "0.2.13"
lazy_static = "1.4.0"
regex = "1.9.5"
rhai = { version = "1.16.2", features = ["only_i32"] }
semver = "1.0.19"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
toml = "0.8.1"
