[package]
name = "mclog"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "async parser and analyzer for Minecraft server logs"

[dependencies]
html-escape = "0.2.13"
log = "0.4.22"
regex = "1.11.1"
rhai = { version = "1.20.0", features = ["only_i32"] }
semver = "1.0.21"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
toml = "0.8.19"
once_cell = "1.20.2"
